# pong

./: .gitignore  README.md
src/: CMakeLists.txt  config.h  config.h.in  main.cpp  main.h
src/core/: game.cpp  game.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  random.cpp  random.hpp  vector2.cpp  vector2.hpp
src/game/: ball.cpp  ball.hpp  entity.cpp  entity.hpp  pong.cpp  pong.hpp  racket.cpp  racket.hpp
src/render/: renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp
